--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "halogen-hooks",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Hooks for Halogen",
   "repository": "https://github.com/thomashoneyman/purescript-halogen-hooks",
   "author": "Thomas Honeyman",
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf .spago output node_modules *.lock",
-    "postinstall": "spago install",
+    "postinstall": "spago -x test.dhall install",
     "build": "spago build --no-install",
+    "build:examples": "spago -x test.dhall build --no-install",
     "watch": "spago build --watch --no-install",
-    "bundle": "spago bundle-app --main Example.Main --to example/app.js --no-install"
+    "watch:examples": "spago -x test.dhall build --watch --no-install",
+    "bundle": "spago -x test.dhall bundle-app --main Example.Main --to example/app.js --no-install"
   }
 }
