--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "license": "MIT",
   "scripts": {
     "clean": "rm -rf .spago output node_modules *.lock",
-    "postinstall": "spago -x examples.dhall install",
+    "postinstall": "spago -x examples/examples.dhall install",
     "build": "spago build --no-install",
-    "build:examples": "spago -x examples.dhall build --no-install",
+    "build:examples": "spago -x examples/examples.dhall build --no-install",
     "watch": "spago build --watch --no-install",
-    "watch:examples": "spago -x examples.dhall build --watch --no-install",
-    "bundle": "spago -x examples.dhall bundle-app --main Example.Main --to examples/app.js --no-install"
+    "watch:examples": "spago -x examples/examples.dhall build --watch --no-install",
+    "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js --no-install"
   }
 }
