--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "scripts": {
     "clean": "rm -rf .spago output node_modules *.lock",
     "postinstall": "spago -x examples/examples.dhall install",
-    "build": "spago build --no-install",
-    "build:examples": "spago -x examples/examples.dhall build --no-install",
-    "watch": "spago build --watch --no-install",
-    "watch:examples": "spago -x examples/examples.dhall build --watch --no-install",
-    "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js --no-install"
+    "build": "spago build",
+    "build:examples": "spago -x examples/examples.dhall build",
+    "build:test": "spago -x test/test.dhall build",
+    "watch": "spago build --watch",
+    "watch:examples": "spago -x examples/examples.dhall build --watch",
+    "watch:test": "spago -x test/test.dhall test --watch",
+    "test": "spago -x test/test.dhall test",
+    "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js"
   }
 }
