--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build:examples": "spago -x examples/examples.dhall build --no-install",
     "watch": "spago build --watch --no-install",
     "watch:examples": "spago -x examples/examples.dhall build --watch --no-install",
-    "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js --no-install"
+    "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js --no-install",
+    "test:manual:isolated": "spago -x test/test.dhall bundle-app --main Test.Manual.Isolated --to test/app.js",
+    "test:manual:shared": "spago -x test/test.dhall bundle-app --main Test.Manual.Shared --to test/app.js"
   }
 }
