--- a/.github/workflows/purescript.yml
+++ b/.github/workflows/purescript.yml
@@ -20,11 +20,7 @@ jobs:
         node-version: '12.x'
     
     - name: Install PureScript
-      run: |
-        TAG=$(basename $(curl --location --silent --output /dev/null -w %{url_effective} https://github.com/purescript/purescript/releases/latest))
-        curl --location --output $HOME/purescript.tar.gz https://github.com/purescript/purescript/releases/download/$TAG/linux64.tar.gz
-        tar -xvf $HOME/purescript.tar.gz -C $HOME/
-        chmod a+x $HOME/purescript
+      run: npm install -g purescript
     
     - name: Install Spago
       run: npm install -g spago
