--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,20 @@
 {
-  "name": "purescript-halogen-hooks",
-  "license": ["MIT"],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/thomashoneyman/purescript-halogen-hooks"
-  },
-  "ignore": ["**/.*", "node_modules", "bower_components", "output"],
-  "dependencies": {
-    "purescript-halogen": "^v5.0.1",
-    "purescript-indexed-monad": "^v1.2.0"
-  }
+    "name": "purescript-halogen-hooks",
+    "license": [
+        "MIT"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/thomashoneyman/purescript-halogen-hooks"
+    },
+    "ignore": [
+        "**/.*",
+        "node_modules",
+        "bower_components",
+        "output"
+    ],
+    "dependencies": {
+        "purescript-halogen": "^v5.0.1",
+        "purescript-indexed-monad": "^v1.2.0"
+    }
 }
