--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "watch:examples": "spago -x examples/examples.dhall build --watch",
     "watch:test": "spago -x test/test.dhall test --watch",
     "test": "spago -x test/test.dhall test",
-    "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js"
+    "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js",
+    "bundle:performance": "spago -x test/test.dhall bundle-app --main Test.Performance.Container --to test/test.js"
+  },
+  "devDependencies": {
+    "puppeteer": "^5.2.0"
   }
 }
