--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "watch": "spago build --watch",
     "watch:examples": "spago -x examples/examples.dhall build --watch",
     "watch:test": "spago -x test/test.dhall test --watch",
-    "test": "spago -x test/test.dhall test",
+    "test": "npm run bundle:performance && spago -x test/test.dhall test",
     "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js",
     "bundle:performance": "spago -x test/test.dhall bundle-app --main Test.Performance.Container --to test/test.js"
   },
   "devDependencies": {
+    "headless-devtools": "^2.0.1",
     "puppeteer": "^5.2.0"
   }
 }
