--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "watch:test": "spago -x test/test.dhall test --watch",
     "test": "npm run bundle:performance && spago -x test/test.dhall test",
     "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js",
-    "bundle:performance": "spago -x test/test.dhall bundle-app --main Test.Performance.Container --to test/test.js"
+    "bundle:performance": "spago -x test/test.dhall bundle-app --main Test.Setup.Performance.App --to test/test.js"
   },
   "devDependencies": {
     "headless-devtools": "^2.0.1",
