--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "filter-console": "^0.1.1",
     "headless-devtools": "^2.0.1",
-    "puppeteer": "^5.2.0"
+    "puppeteer": "^5.2.0",
+    "tracealyzer": "^0.10.3"
   }
 }
