--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
     "watch": "spago build --watch",
     "watch:examples": "spago -x examples/examples.dhall build --watch",
     "watch:test": "spago -x test/test.dhall test --watch",
-    "test": "spago -x test/test.dhall test",
-    "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js"
+    "test": "npm run bundle:performance && spago -x test/test.dhall test",
+    "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js",
+    "bundle:performance": "spago -x test/test.dhall bundle-app --main Test.Setup.Performance.App --to test/test.js"
+  },
+  "devDependencies": {
+    "filter-console": "^0.1.1",
+    "headless-devtools": "^2.0.1",
+    "puppeteer": "^5.2.0",
+    "tracealyzer": "^0.10.3"
   }
 }
