Switch to use setup-purescript in GH Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,17 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Use Node.js
-        uses: actions/setup-node@v1
+      - uses: thomashoneyman/setup-purescript@master
+      - uses: actions/setup-node@v1
         with:
           node-version: "12.x"
-
-      - name: Install PureScript
-        run: npm install -g purescript
-
-      - name: Install Spago
-        run: npm install -g spago
 
       - name: Install test dependencies
         run: npm install
