--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "build": "spago build",
     "build:examples": "spago -x examples/examples.dhall build",
     "build:test": "spago -x test/test.dhall build",
-    "test": "npm run bundle:performance && spago -x test/test.dhall test",
-    "bundle": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js",
-    "bundle:performance": "spago -x test/test.dhall bundle-app --main Test.Setup.Performance.App --to test/test.js"
+    "snapshot": "npm run bundle:performance && spago -x test/test.dhall run --main Performance.Snapshot.Write",
+    "test": "spago -x test/test.dhall test",
+    "test:performance": "npm run bundle:performance && spago -x test/test.dhall run --main Performance.Main",
+    "bundle:examples": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js",
+    "bundle:performance": "spago -x test/test.dhall bundle-app --main Performance.Test.App --to test/test.js --no-build"
   },
   "devDependencies": {
     "filter-console": "^0.1.1",
