Add snapshot test to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,9 @@ jobs:
       - name: Run tests
         run: npm run test
 
+      - name: Run performance snapshots
+        run: npm run test:performance
+
       - name: Archive test results
         uses: actions/upload-artifact@v2
         with:
