--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Thomas Honeyman <hello@thomashoneyman.com>",
   "license": "MIT",
   "scripts": {
+    "postinstall": "node node_modules/puppeteer/install.js",
     "clean": "rm -rf .spago output node_modules *.lock",
     "build": "spago build",
     "build:examples": "spago -x examples/examples.dhall build",
