--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "snapshot": "npm run bundle:performance && spago -x test/test.dhall run --main Performance.Snapshot.Write",
     "test": "spago -x test/test.dhall test",
     "test:performance": "npm run bundle:performance && spago -x test/test.dhall run --main Performance.Main",
-    "bundle:examples": "spago -x examples/examples.dhall bundle-app --main Example.Main --to examples/app.js",
+    "bundle:examples": "spago -x examples/examples.dhall bundle-app --minify --main Example.Main --to examples/app.js",
     "bundle:performance": "spago -x test/test.dhall bundle-app --minify --main Performance.Test.App --to test/test.js --no-build"
   },
   "devDependencies": {
