--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
   "license": "MIT",
   "scripts": {
     "postinstall": "node node_modules/puppeteer/install.js",
-    "clean": "rm -rf .spago output node_modules *.lock",
     "build": "spago build",
     "build:examples": "spago -x examples/examples.dhall build",
     "build:test": "spago -x test/test.dhall build",
-    "snapshot": "npm run bundle:performance && spago -x test/test.dhall run --main Performance.Snapshot.Write",
+    "snapshot": "npm run bundle:performance && node test/run-snapshot.mjs",
     "test": "spago -x test/test.dhall test",
-    "test:performance": "npm run bundle:performance && spago -x test/test.dhall run --main Performance.Main",
+    "test:performance": "npm run bundle:performance && node test/run-test.mjs",
     "bundle:examples": "spago -x examples/examples.dhall bundle-app --minify --main Example.Main --to examples/app.js",
-    "bundle:performance": "spago -x test/test.dhall bundle-app --minify --main Performance.Test.App --to test/test.js --no-build"
+    "bundle:performance": "spago -x test/test.performance.dhall build && purs-backend-es bundle-app --no-build --minify --main Performance.Test.App --to test/test.js"
   },
   "devDependencies": {
     "filter-console": "^0.1.1",
     "headless-devtools": "^2.0.1",
     "puppeteer": "^13.7.0",
+    "purs-backend-es": "^1.1.0",
     "tracealyzer": "^0.10.3"
   }
 }
